# Qt-TCP-Chat

./: .gitignore  CMakeLists.txt  QT-TCP-CHAT.pro
Client/: CMakeLists.txt
Client/include/: chatclient.h  mainwindow.h
Client/src/: chatclient.cpp  main.cpp  mainwindow.cpp
Server/: CMakeLists.txt  Server.pro
Server/include/: chatserver.h
Server/src/: chatserver.cpp  main.cpp
